// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-select multi should not render a native select on a mobile / tablet screen 1`] = `
<ic-select label="IC Select Test" multiple="true">
  <mock:shadow-root>
    <ic-input-container>
      <ic-input-label for="ic-select-input-67" helpertext="" label="IC Select Test"></ic-input-label>
      <ic-input-component-container class="default">
        <!---->
        <div class="focus-indicator">
          <div class="select-container">
            <button aria-controls="ic-select-input-67-menu" aria-describedby="" aria-expanded="false" aria-haspopup="listbox" aria-invalid="false" aria-label="IC Select Test, Select an option" aria-owns="ic-select-input-67-menu" class="select-input" id="ic-select-input-67">
              <ic-typography class="placeholder value-text" variant="body">
                <p>
                  Select an option
                </p>
              </ic-typography>
              <div class="select-input-end">
                <span aria-hidden="true" class="expand-icon">
                  svg
                </span>
              </div>
            </button>
          </div>
        </div>
      </ic-input-component-container>
      <ic-menu class="default multiple no-focus no-results">
        <ul aria-label="IC Select Test pop-up" aria-multiselectable="true" class="menu" id="ic-select-input-67-menu" role="listbox" tabindex="-1">
          <li aria-disabled="false" aria-label="Test label 1" aria-selected="false" class="option" data-label="Test label 1" data-value="Test value 1" id="ic-select-input-67-menu-Test value 1" role="option" tabindex="-1">
            <div class="option-text-container">
              <div class="option-label">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    Test label 1
                  </p>
                </ic-typography>
              </div>
            </div>
          </li>
          <li aria-disabled="false" aria-label="Test label 2" aria-selected="false" class="option" data-label="Test label 2" data-value="Test value 2" id="ic-select-input-67-menu-Test value 2" role="option" tabindex="-1">
            <div class="option-text-container">
              <div class="option-label">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    Test label 2
                  </p>
                </ic-typography>
              </div>
            </div>
          </li>
          <li aria-disabled="false" aria-label="Test label 3" aria-selected="false" class="option" data-label="Test label 3" data-value="Test value 3" id="ic-select-input-67-menu-Test value 3" role="option" tabindex="-1">
            <div class="option-text-container">
              <div class="option-label">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    Test label 3
                  </p>
                </ic-typography>
              </div>
            </div>
          </li>
        </ul>
      </ic-menu>
      <div aria-live="polite" class="multi-select-selected-count" role="status"></div>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" name="ic-select-input-67" type="hidden" value="">
</ic-select>
`;

exports[`ic-select multi should test keydown on menu - arrow down, up, and enter 1`] = `
<ic-select label="IC Select Test" multiple="true">
  <mock:shadow-root>
    <ic-input-container>
      <ic-input-label for="ic-select-input-70" helpertext="" label="IC Select Test"></ic-input-label>
      <ic-input-component-container class="default menu-open">
        <!---->
        <div class="focus-indicator">
          <div class="select-container">
            <button aria-controls="ic-select-input-70-menu" aria-describedby="" aria-expanded="true" aria-haspopup="listbox" aria-invalid="false" aria-label="IC Select Test, 1 of 3 selected, Test label 1" aria-owns="ic-select-input-70-menu" class="select-input" id="ic-select-input-70">
              <ic-typography class="value-text" variant="body">
                <p>
                  Test label 1
                </p>
              </ic-typography>
              <div class="select-input-end">
                <span aria-hidden="true" class="expand-icon expand-icon-open">
                  svg
                </span>
              </div>
            </button>
          </div>
        </div>
      </ic-input-component-container>
      <ic-menu class="default multiple no-focus no-results open" data-popper-placement="bottom-start" data-popper-reference-hidden open="" style="position: absolute; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 7px);">
        <ul aria-activedescendant="ic-select-input-70-menu-Test value 1" aria-label="IC Select Test pop-up" aria-multiselectable="true" class="menu" id="ic-select-input-70-menu" role="listbox" tabindex="-1">
          <li aria-disabled="false" aria-label="Test label 1" aria-selected="true" class="focused-option option" data-label="Test label 1" data-value="Test value 1" id="ic-select-input-70-menu-Test value 1" role="option" tabindex="0">
            <div class="option-text-container">
              <div class="option-label">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    Test label 1
                  </p>
                </ic-typography>
              </div>
            </div>
            <span class="check-icon">
              svg
            </span>
          </li>
          <li aria-disabled="false" aria-label="Test label 2" aria-selected="false" class="option" data-label="Test label 2" data-value="Test value 2" id="ic-select-input-70-menu-Test value 2" role="option" tabindex="-1">
            <div class="option-text-container">
              <div class="option-label">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    Test label 2
                  </p>
                </ic-typography>
              </div>
            </div>
          </li>
          <li aria-disabled="false" aria-label="Test label 3" aria-selected="false" class="option" data-label="Test label 3" data-value="Test value 3" id="ic-select-input-70-menu-Test value 3" role="option" tabindex="-1">
            <div class="option-text-container">
              <div class="option-label">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    Test label 3
                  </p>
                </ic-typography>
              </div>
            </div>
          </li>
        </ul>
      </ic-menu>
      <div aria-live="polite" class="multi-select-selected-count" role="status">
        1 of 3 selected
      </div>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" name="ic-select-input-70" type="hidden" value="Test value 1">
</ic-select>
`;

exports[`ic-select multi should test keydown on menu - arrow down, up, and enter 2`] = `
<ic-select label="IC Select Test" multiple="true">
  <mock:shadow-root>
    <ic-input-container>
      <ic-input-label for="ic-select-input-70" helpertext="" label="IC Select Test"></ic-input-label>
      <ic-input-component-container class="default menu-open">
        <!---->
        <div class="focus-indicator">
          <div class="select-container">
            <button aria-controls="ic-select-input-70-menu" aria-describedby="" aria-expanded="true" aria-haspopup="listbox" aria-invalid="false" aria-label="IC Select Test, 2 of 3 selected, Test label 1, Test label 2" aria-owns="ic-select-input-70-menu" class="select-input" id="ic-select-input-70">
              <ic-typography class="value-text" variant="body">
                <p>
                  Test label 1, Test label 2
                </p>
              </ic-typography>
              <div class="select-input-end">
                <span aria-hidden="true" class="expand-icon expand-icon-open">
                  svg
                </span>
              </div>
            </button>
          </div>
        </div>
      </ic-input-component-container>
      <ic-menu class="default multiple no-focus no-results open" data-popper-placement="bottom-start" data-popper-reference-hidden open="" style="position: absolute; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 7px);">
        <ul aria-activedescendant="ic-select-input-70-menu-Test value 2" aria-label="IC Select Test pop-up" aria-multiselectable="true" class="menu" id="ic-select-input-70-menu" role="listbox" tabindex="-1">
          <li aria-disabled="false" aria-label="Test label 1" aria-selected="true" class="option" data-label="Test label 1" data-value="Test value 1" id="ic-select-input-70-menu-Test value 1" role="option" tabindex="0">
            <div class="option-text-container">
              <div class="option-label">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    Test label 1
                  </p>
                </ic-typography>
              </div>
            </div>
            <span class="check-icon">
              svg
            </span>
          </li>
          <li aria-disabled="false" aria-label="Test label 2" aria-selected="true" class="focused-option option" data-label="Test label 2" data-value="Test value 2" id="ic-select-input-70-menu-Test value 2" role="option" tabindex="0">
            <div class="option-text-container">
              <div class="option-label">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    Test label 2
                  </p>
                </ic-typography>
              </div>
            </div>
            <span class="check-icon">
              svg
            </span>
          </li>
          <li aria-disabled="false" aria-label="Test label 3" aria-selected="false" class="option" data-label="Test label 3" data-value="Test value 3" id="ic-select-input-70-menu-Test value 3" role="option" tabindex="-1">
            <div class="option-text-container">
              <div class="option-label">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    Test label 3
                  </p>
                </ic-typography>
              </div>
            </div>
          </li>
        </ul>
      </ic-menu>
      <div aria-live="polite" class="multi-select-selected-count" role="status">
        2 of 3 selected
      </div>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" name="ic-select-input-70" type="hidden" value="Test value 1,Test value 2">
</ic-select>
`;

exports[`ic-select searchable should render as required: required-searchable 1`] = `
<ic-select class="ic-select-searchable" label="IC Select Test" required="true" searchable="true">
  <mock:shadow-root>
    <ic-input-container>
      <ic-input-label for="ic-select-input-26" helpertext="" label="IC Select Test" required=""></ic-input-label>
      <ic-input-component-container class="default">
        <!---->
        <div class="focus-indicator">
          <div class="searchable-select-container">
            <input aria-autocomplete="list" aria-controls="ic-select-input-26-menu" aria-describedby="" aria-expanded="false" aria-invalid="false" aria-label="IC Select Test" aria-required="true" autocomplete="off" class="select-input" id="ic-select-input-26" placeholder="Select an option" role="combobox">
            <span aria-hidden="true" class="expand-icon">
              svg
            </span>
            <div aria-live="polite" class="searchable-select-results-status" role="status"></div>
          </div>
        </div>
      </ic-input-component-container>
      <ic-menu class="default no-focus no-results">
        <ul aria-label="IC Select Test pop-up" aria-multiselectable="false" class="menu" id="ic-select-input-26-menu" role="listbox" tabindex="-1">
          <li aria-disabled="false" aria-label="No results found" aria-selected="false" class="option" data-label="No results found" data-value id="ic-select-input-26-menu-" role="option" tabindex="-1">
            <div class="option-text-container">
              <div class="option-label">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    No results found
                  </p>
                </ic-typography>
              </div>
            </div>
          </li>
        </ul>
      </ic-menu>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" name="ic-select-input-26" type="hidden" value="">
</ic-select>
`;

exports[`ic-select single native should test native select with groups: native-select-with-groups 1`] = `
<ic-select label="IC Select Test">
  <mock:shadow-root>
    <ic-input-container>
      <ic-input-label for="ic-select-input-24" helpertext="" label="New label"></ic-input-label>
      <ic-input-component-container size="default" validationstatus="">
        <select aria-describedby="" aria-invalid="false" aria-label="New label" class="select-option-selected" id="ic-select-input-24">
          <option disabled="" selected="" value="">
            Select an option
          </option>
          <optgroup label="Fancy">
            <option value="Cap">
              Cappuccino
            </option>
            <option value="Flat">
              Flat white
            </option>
          </optgroup>
          <optgroup label="Boring">
            <option value="Fil">
              Filter
            </option>
            <option value="Lat">
              Latte
            </option>
          </optgroup>
        </select>
      </ic-input-component-container>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" name="ic-select-input-24" type="hidden" value="">
</ic-select>
`;

exports[`ic-select single native should test native select: native-select 1`] = `
<ic-select label="IC Select Test">
  <mock:shadow-root>
    <ic-input-container>
      <ic-input-label for="ic-select-input-23" helpertext="" label="New label"></ic-input-label>
      <ic-input-component-container size="default" validationstatus="">
        <select aria-describedby="" aria-invalid="false" aria-label="New label" class="select-option-selected" id="ic-select-input-23">
          <option disabled="" selected="" value="">
            Select an option
          </option>
          <option value="Test value 1">
            Test label 1
          </option>
          <option value="Test value 2">
            Test label 2
          </option>
          <option value="Test value 3">
            Test label 3
          </option>
        </select>
      </ic-input-component-container>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" name="ic-select-input-23" type="hidden" value="">
</ic-select>
`;

exports[`ic-select single should have correct validation status: with-validation-status-error 1`] = `
<ic-select label="IC Select Test" validation-status="error">
  <mock:shadow-root>
    <ic-input-container>
      <ic-input-label for="ic-select-input-3" helpertext="" label="IC Select Test"></ic-input-label>
      <ic-input-component-container class="default error">
        <!---->
        <div class="focus-indicator">
          <div class="select-container">
            <button aria-controls="ic-select-input-3-menu" aria-describedby="ic-select-input-3-validation-text" aria-expanded="false" aria-haspopup="listbox" aria-invalid="true" aria-label="IC Select Test, Select an option" aria-owns="ic-select-input-3-menu" class="select-input" id="ic-select-input-3">
              <ic-typography class="placeholder value-text" variant="body">
                <p>
                  Select an option
                </p>
              </ic-typography>
              <div class="select-input-end">
                <span aria-hidden="true" class="expand-icon">
                  svg
                </span>
              </div>
            </button>
          </div>
        </div>
      </ic-input-component-container>
      <ic-menu class="default no-focus no-results">
        <ul aria-label="IC Select Test pop-up" aria-multiselectable="false" class="menu" id="ic-select-input-3-menu" role="listbox" tabindex="-1">
          <li aria-disabled="false" aria-label="No results found" aria-selected="false" class="option" data-label="No results found" data-value id="ic-select-input-3-menu-" role="option" tabindex="-1">
            <div class="option-text-container">
              <div class="option-label">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    No results found
                  </p>
                </ic-typography>
              </div>
            </div>
          </li>
        </ul>
      </ic-menu>
      <ic-input-validation arialivemode="polite" for="ic-select-input-3" message="" status="error"></ic-input-validation>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" name="ic-select-input-3" type="hidden" value="">
</ic-select>
`;

exports[`ic-select single should not have a validation status if disabled: no-validation-status-if-disabled 1`] = `
<ic-select class="ic-select-disabled" disabled="" label="IC Select Test" validation-status="error">
  <mock:shadow-root>
    <ic-input-container>
      <ic-input-label disabled="" for="ic-select-input-4" helpertext="" label="IC Select Test"></ic-input-label>
      <ic-input-component-container class="default disabled">
        <!---->
        <div class="focus-indicator">
          <div class="select-container">
            <button aria-controls="ic-select-input-4-menu" aria-describedby="" aria-expanded="false" aria-haspopup="listbox" aria-invalid="true" aria-label="IC Select Test, Select an option" aria-owns="ic-select-input-4-menu" class="select-input" disabled="" id="ic-select-input-4">
              <ic-typography class="placeholder value-text" variant="body">
                <p>
                  Select an option
                </p>
              </ic-typography>
              <div class="select-input-end">
                <span aria-hidden="true" class="expand-icon">
                  svg
                </span>
              </div>
            </button>
          </div>
        </div>
      </ic-input-component-container>
      <ic-menu class="default no-focus no-results">
        <ul aria-label="IC Select Test pop-up" aria-multiselectable="false" class="menu" id="ic-select-input-4-menu" role="listbox" tabindex="-1">
          <li aria-disabled="false" aria-label="No results found" aria-selected="false" class="option" data-label="No results found" data-value id="ic-select-input-4-menu-" role="option" tabindex="-1">
            <div class="option-text-container">
              <div class="option-label">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    No results found
                  </p>
                </ic-typography>
              </div>
            </div>
          </li>
        </ul>
      </ic-menu>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" disabled="" name="ic-select-input-4" type="hidden" value="">
</ic-select>
`;

exports[`ic-select single should not render a label when the 'hide-label' prop is supplied: hide-label-set 1`] = `
<ic-select hide-label="" label="IC Select Test">
  <mock:shadow-root>
    <ic-input-container>
      <ic-input-component-container class="default">
        <!---->
        <div class="focus-indicator">
          <div class="select-container">
            <button aria-controls="ic-select-input-0-menu" aria-describedby="" aria-expanded="false" aria-haspopup="listbox" aria-invalid="false" aria-label="IC Select Test, Select an option" aria-owns="ic-select-input-0-menu" class="select-input" id="ic-select-input-0">
              <ic-typography class="placeholder value-text" variant="body">
                <p>
                  Select an option
                </p>
              </ic-typography>
              <div class="select-input-end">
                <span aria-hidden="true" class="expand-icon">
                  svg
                </span>
              </div>
            </button>
          </div>
        </div>
      </ic-input-component-container>
      <ic-menu class="default no-focus no-results">
        <ul aria-label="IC Select Test pop-up" aria-multiselectable="false" class="menu" id="ic-select-input-0-menu" role="listbox" tabindex="-1">
          <li aria-disabled="false" aria-label="No results found" aria-selected="false" class="option" data-label="No results found" data-value id="ic-select-input-0-menu-" role="option" tabindex="-1">
            <div class="option-text-container">
              <div class="option-label">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    No results found
                  </p>
                </ic-typography>
              </div>
            </div>
          </li>
        </ul>
      </ic-menu>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" name="ic-select-input-0" type="hidden" value="">
</ic-select>
`;

exports[`ic-select single should not render validation text if no validation status has been supplied: no-validation-text-if-no-status 1`] = `
<ic-select label="IC Select Test" validation-text="Test validation text">
  <mock:shadow-root>
    <ic-input-container>
      <ic-input-label for="ic-select-input-6" helpertext="" label="IC Select Test"></ic-input-label>
      <ic-input-component-container class="default">
        <!---->
        <div class="focus-indicator">
          <div class="select-container">
            <button aria-controls="ic-select-input-6-menu" aria-describedby="" aria-expanded="false" aria-haspopup="listbox" aria-invalid="false" aria-label="IC Select Test, Select an option" aria-owns="ic-select-input-6-menu" class="select-input" id="ic-select-input-6">
              <ic-typography class="placeholder value-text" variant="body">
                <p>
                  Select an option
                </p>
              </ic-typography>
              <div class="select-input-end">
                <span aria-hidden="true" class="expand-icon">
                  svg
                </span>
              </div>
            </button>
          </div>
        </div>
      </ic-input-component-container>
      <ic-menu class="default no-focus no-results">
        <ul aria-label="IC Select Test pop-up" aria-multiselectable="false" class="menu" id="ic-select-input-6-menu" role="listbox" tabindex="-1">
          <li aria-disabled="false" aria-label="No results found" aria-selected="false" class="option" data-label="No results found" data-value id="ic-select-input-6-menu-" role="option" tabindex="-1">
            <div class="option-text-container">
              <div class="option-label">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    No results found
                  </p>
                </ic-typography>
              </div>
            </div>
          </li>
        </ul>
      </ic-menu>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" name="ic-select-input-6" type="hidden" value="">
</ic-select>
`;

exports[`ic-select single should render correct validation text: with-validation-text 1`] = `
<ic-select label="IC Select Test" validation-status="error" validation-text="Test validation text">
  <mock:shadow-root>
    <ic-input-container>
      <ic-input-label for="ic-select-input-5" helpertext="" label="IC Select Test"></ic-input-label>
      <ic-input-component-container class="default error">
        <!---->
        <div class="focus-indicator">
          <div class="select-container">
            <button aria-controls="ic-select-input-5-menu" aria-describedby="ic-select-input-5-validation-text" aria-expanded="false" aria-haspopup="listbox" aria-invalid="true" aria-label="IC Select Test, Select an option" aria-owns="ic-select-input-5-menu" class="select-input" id="ic-select-input-5">
              <ic-typography class="placeholder value-text" variant="body">
                <p>
                  Select an option
                </p>
              </ic-typography>
              <div class="select-input-end">
                <span aria-hidden="true" class="expand-icon">
                  svg
                </span>
              </div>
            </button>
          </div>
        </div>
      </ic-input-component-container>
      <ic-menu class="default no-focus no-results">
        <ul aria-label="IC Select Test pop-up" aria-multiselectable="false" class="menu" id="ic-select-input-5-menu" role="listbox" tabindex="-1">
          <li aria-disabled="false" aria-label="No results found" aria-selected="false" class="option" data-label="No results found" data-value id="ic-select-input-5-menu-" role="option" tabindex="-1">
            <div class="option-text-container">
              <div class="option-label">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    No results found
                  </p>
                </ic-typography>
              </div>
            </div>
          </li>
        </ul>
      </ic-menu>
      <ic-input-validation arialivemode="polite" for="ic-select-input-5" message="Test validation text" status="error"></ic-input-validation>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" name="ic-select-input-5" type="hidden" value="">
</ic-select>
`;

exports[`ic-select single should render readonly: readonly 1`] = `
<ic-select label="IC Select Test" readonly="true">
  <mock:shadow-root>
    <ic-input-container readonly="">
      <ic-input-label for="ic-select-input-2" helpertext="" label="IC Select Test" readonly=""></ic-input-label>
      <ic-input-component-container class="default readonly">
        <!---->
        <div class="focus-indicator">
          <ic-typography>
            <p></p>
          </ic-typography>
        </div>
      </ic-input-component-container>
      <ic-menu class="default no-focus no-results">
        <ul aria-label="IC Select Test pop-up" aria-multiselectable="false" class="menu" id="ic-select-input-2-menu" role="listbox" tabindex="-1">
          <li aria-disabled="false" aria-label="No results found" aria-selected="false" class="option" data-label="No results found" data-value id="ic-select-input-2-menu-" role="option" tabindex="-1">
            <div class="option-text-container">
              <div class="option-label">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    No results found
                  </p>
                </ic-typography>
              </div>
            </div>
          </li>
        </ul>
      </ic-menu>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" name="ic-select-input-2" type="hidden" value="">
</ic-select>
`;

exports[`ic-select single should test select as submit on form 1`] = `
<ic-select form="new-form" id="ic-select" label="IC Select Test" value="test-value">
  <mock:shadow-root>
    <ic-input-container>
      <ic-input-label for="ic-select-input-1" helpertext="" label="IC Select Test"></ic-input-label>
      <ic-input-component-container class="default">
        <!---->
        <div class="focus-indicator">
          <div class="select-container">
            <button aria-controls="ic-select-input-1-menu" aria-describedby="" aria-expanded="false" aria-haspopup="listbox" aria-invalid="false" aria-label="IC Select Test, Select an option" aria-owns="ic-select-input-1-menu" class="select-input" id="ic-select-input-1">
              <ic-typography class="value-text" variant="body">
                <p>
                  Select an option
                </p>
              </ic-typography>
              <div class="select-input-end">
                <span aria-hidden="true" class="expand-icon">
                  svg
                </span>
              </div>
            </button>
          </div>
        </div>
      </ic-input-component-container>
      <ic-menu class="default no-focus no-results">
        <ul aria-label="IC Select Test pop-up" aria-multiselectable="false" class="menu" id="ic-select-input-1-menu" role="listbox" tabindex="-1">
          <li aria-disabled="false" aria-label="No results found" aria-selected="false" class="option" data-label="No results found" data-value id="ic-select-input-1-menu-" role="option" tabindex="-1">
            <div class="option-text-container">
              <div class="option-label">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    No results found
                  </p>
                </ic-typography>
              </div>
            </div>
          </li>
        </ul>
      </ic-menu>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" name="ic-select-input-1" type="hidden" value="test-value">
</ic-select>
`;

exports[`ic-select single should test with clear button: with-clear-button 1`] = `
<ic-select label="IC Select Test" show-clear-button="true" value="test-value">
  <mock:shadow-root>
    <ic-input-container>
      <ic-input-label for="ic-select-input-7" helpertext="" label="IC Select Test"></ic-input-label>
      <ic-input-component-container class="default">
        <!---->
        <div class="focus-indicator">
          <div class="select-container">
            <button aria-controls="ic-select-input-7-menu" aria-describedby="" aria-expanded="false" aria-haspopup="listbox" aria-invalid="false" aria-label="IC Select Test, Select an option" aria-owns="ic-select-input-7-menu" class="select-input" id="ic-select-input-7">
              <ic-typography class="value-text with-clear-button" variant="body">
                <p>
                  Select an option
                </p>
              </ic-typography>
              <div class="select-input-end">
                <div class="divider"></div>
                <span aria-hidden="true" class="expand-icon">
                  svg
                </span>
              </div>
            </button>
            <ic-button class="button-size-default ic-button-variant-icon clear-button dark" exportparts="button" id="clear-button">
              <mock:shadow-root>
                <ic-tooltip id="ic-tooltip-ic-button-with-tooltip-clear-button" label="Clear selection" placement="bottom" target="ic-button-with-tooltip-clear-button">
                  <button aria-describedby="ic-tooltip-ic-button-with-tooltip-clear-button" aria-label="Clear selection" class="button" part="button" type="button">
                    <slot></slot>
                  </button>
                </ic-tooltip>
              </mock:shadow-root>
              svg
            </ic-button>
          </div>
        </div>
      </ic-input-component-container>
      <ic-menu class="default no-focus no-results">
        <ul aria-label="IC Select Test pop-up" aria-multiselectable="false" class="menu" id="ic-select-input-7-menu" role="listbox" tabindex="-1">
          <li aria-disabled="false" aria-label="Test label 1" aria-selected="false" class="option" data-label="Test label 1" data-value="Test value 1" id="ic-select-input-7-menu-Test value 1" role="option" tabindex="-1">
            <div class="option-text-container">
              <div class="option-label">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    Test label 1
                  </p>
                </ic-typography>
              </div>
            </div>
          </li>
          <li aria-disabled="false" aria-label="Test label 2" aria-selected="false" class="option" data-label="Test label 2" data-value="Test value 2" id="ic-select-input-7-menu-Test value 2" role="option" tabindex="-1">
            <div class="option-text-container">
              <div class="option-label">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    Test label 2
                  </p>
                </ic-typography>
              </div>
            </div>
          </li>
          <li aria-disabled="false" aria-label="Test label 3" aria-selected="false" class="option" data-label="Test label 3" data-value="Test value 3" id="ic-select-input-7-menu-Test value 3" role="option" tabindex="-1">
            <div class="option-text-container">
              <div class="option-label">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    Test label 3
                  </p>
                </ic-typography>
              </div>
            </div>
          </li>
        </ul>
      </ic-menu>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" name="ic-select-input-7" type="hidden" value="test-value">
</ic-select>
`;
